Added forgotted skill and tool cards and changed home avatar. Also added social links.

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta itemprop="name" content="Levente Varga | Portfolio">
   <meta itemprop="description" content="This is my self-developed portfolio website built with React.js. It contains all the important information about my work and professional experience.">
   <meta itemprop="image"
-    content="https://vlportfolio.netlify.app/thumbs.jpg">
+    content="https://raw.githubusercontent.com/Varga-Levente/Portfolio/master/ASSETS/thumbs.jpg">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://vlportfolio.netlify.app">
@@ -23,14 +23,14 @@
   <meta property="og:title" content="Levente Varga | Portfolio">
   <meta property="og:description" content="This is my self-developed portfolio website built with React.js. It contains all the important information about my work and professional experience.">
   <meta property="og:image"
-    content="https://vlportfolio.netlify.app/thumbs.jpg">
+    content="https://raw.githubusercontent.com/Varga-Levente/Portfolio/master/ASSETS/thumbs.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Levente Varga | Portfolio">
   <meta name="twitter:description" content="This is my self-developed portfolio website built with React.js. It contains all the important information about my work and professional experience.">
   <meta name="twitter:image"
-    content="https://vlportfolio.netlify.app/thumbs.jpg">
+    content="https://raw.githubusercontent.com/Varga-Levente/Portfolio/master/ASSETS/thumbs.jpg">
 </head>
 
 <body>
